<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    style="@style/Widget.Material3.BottomSheet"
    android:padding="20dp"
    android:background="@drawable/background_modal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <!-- Bottom sheet contents. -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp">
        <TextView
            style="@style/WhiteBoldTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:textAlignment="center"
            android:text="Filtros"/>
        <ImageButton
            android:id="@+id/ibModalBottomSheetClose"
            android:background="?actionBarItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button_close"
            android:layout_alignParentEnd="true"
            android:clickable="true"/>
    </RelativeLayout>

    <TextView
        style="@style/WhiteSemiBoldSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Categorías"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgModalBottomSheet"
        app:chipSpacingVertical="4dp"
        app:chipSpacingHorizontal="8dp"
        android:layout_marginBottom="16dp"
        app:singleSelection="true"
        app:selectionRequired="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.chip.Chip
            android:checkable="true"
            android:checked="true"
            style="@style/chipSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Todas las categorías"/>
        <com.google.android.material.chip.Chip
            android:checkable="true"
            style="@style/chipUnselected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kind_pet_cat"
            app:chipIcon="@drawable/cat"/>
        <com.google.android.material.chip.Chip
            android:checkable="true"
            style="@style/chipUnselected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kind_pet_dog"
            app:chipIcon="@drawable/dog"/>
        <com.google.android.material.chip.Chip
            android:checkable="true"
            style="@style/chipUnselected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kind_pet_bird"
            app:chipIcon="@drawable/bird"/>

        <com.google.android.material.chip.Chip
            android:checkable="true"
            style="@style/chipUnselected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kind_pet_rabbit"
            app:chipIcon="@drawable/rabbit"/>
        <com.google.android.material.chip.Chip
            android:checkable="true"
            style="@style/chipUnselected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kind_pet_others"
            app:chipIcon="@drawable/others"/>
    </com.google.android.material.chip.ChipGroup>

    <TextView
        style="@style/WhiteSemiBoldSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Género"
        android:layout_marginBottom="8dp"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cgModalBottomSheet2"
        app:chipSpacingVertical="4dp"
        app:chipSpacingHorizontal="8dp"
        android:layout_marginBottom="16dp"
        app:singleSelection="true"
        app:selectionRequired="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.chip.Chip
            android:checkable="true"
            android:checked="true"
            style="@style/chipSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Todos los géneros"/>
        <com.google.android.material.chip.Chip
            android:checkable="true"
            style="@style/chipUnselected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genero_hembra"
            app:chipIcon="@drawable/hembra"/>
        <com.google.android.material.chip.Chip
            android:checkable="true"
            style="@style/chipUnselected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genero_macho"
            app:chipIcon="@drawable/macho"/>
    </com.google.android.material.chip.ChipGroup>

    <Button
        style="@style/BtnPrimary"
        android:id="@+id/btnModalBottomSheetApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Aplicar filtros"/>

</LinearLayout>